fix panels overlapping

--- a/resources/css/xcoin.css
+++ b/resources/css/xcoin.css
@@ -11,6 +11,7 @@
 
     content: '';
     position: absolute;
+    z-index: -1;
 
     width: 100%;
     height: 100%;
@@ -54,6 +55,7 @@
 .layout-content-container .crowd-funding .panel-heading > img {
     position: relative;
     width: 100%;
+    min-height: 140px;
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
     object-fit: contain;
@@ -171,17 +173,23 @@
 }
 
 .layout-content-container .crowd-funding .panel-footer .funding-details {
-    padding: 0 15px;
+    margin: 0;
+    padding: 0;
     border-top: 1px solid #f0f5f8;
 }
 
 .layout-content-container .crowd-funding .panel-footer .funding-details.large {
-    padding: 10px 15px;
+    padding: 10px 0;
 }
 
 .layout-content-container .crowd-funding .panel-footer .funding-details .col-md-6 {
+    height: 42px;
     padding: 12px 2px 12px 15px;
     font-size: 12px;
+}
+
+.layout-content-container .crowd-funding .panel-footer .funding-details .col-md-12 {
+    height: 30px;
 }
 
 .layout-content-container .crowd-funding .panel-footer .funding-details .col-md-6:first-of-type {
@@ -415,6 +423,7 @@
 
     content: '';
     position: absolute;
+    z-index: -1;
 
     width: 100%;
     height: 100%;
@@ -454,6 +463,7 @@
 .fundingPanels .row .panel-heading > img {
     position: relative;
     width: 100%;
+    min-height: 140px;
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
     object-fit: contain;
@@ -571,17 +581,23 @@
 }
 
 .fundingPanels .row .panel-footer .funding-details {
-    padding: 0 15px;
+    margin: 0;
+    padding: 0;
     border-top: 1px solid #f0f5f8;
 }
 
 .fundingPanels .row .panel-footer .funding-details.large {
-    padding: 10px 15px;
+    padding: 10px 0;
 }
 
 .fundingPanels .row .panel-footer .funding-details .col-md-6 {
+    height: 42px;
     padding: 12px 2px 12px 15px;
     font-size: 12px;
+}
+
+.fundingPanels .row .panel-footer .funding-details .col-md-12 {
+    height: 30px;
 }
 
 .fundingPanels .row .panel-footer .funding-details .col-md-6:first-of-type {
